common/libxl-3.1.0_破解/libxl-3.1.0/include_c/FormatA.h

    XLAPI FontHandle XLAPIENTRY xlFormatFontA(FormatHandle handle);
    XLAPI        int XLAPIENTRY xlFormatSetFontA(FormatHandle handle, FontHandle fontHandle);